#9607 URL 문서 및 DB 스크립트 현행화 - [업무흐름]
* documentAdmin을 workflow로 변경 함.
** URL 변경
/documents/list  ==> /documents
/documents-admin/search ==> /workflows/search
/documents-admin/list ==> /workflows
/documents-admin/new ==> /workflows/new
/documents-admin/{id}/edit ==> /workflows/{id}/edit
/rest/documents-admin ==> /rest/workflows
/rest/documents-admin/{id} ==>/rest/workflows/{id}
/rest/documents-admin/{id}/display ==> /rest/workflows/{id}/display
** html, kt 파일 변경
document/documentAdminSearch.html ==> /workflow/workFlowSearch.html
document/documentAdminList.html  ==> /workflow/workFlowList.html
document/documentEdit.html  ==> /workflow/workFlowEdit.html

--- a/src/main/resources/public/template/document/documentSearch.html
+++ b/src/main/resources/public/template/document/documentSearch.html
@@ -57,7 +57,7 @@
             } else {
                 offsetCount = 0;
                 urlParam = aliceJs.serialize(document.getElementById('searchDocumentsFrm')) + '&offset=' + offsetCount;
-                restSubmit('get', '/documents/list?' + urlParam, isScroll);
+                restSubmit('get', '/documents?' + urlParam, isScroll);
             }
         }
 
