--- a/src/main/resources/public/template/workflow/workFlowSearch.html
+++ b/src/main/resources/public/template/workflow/workFlowSearch.html
@@ -64,11 +64,11 @@
                     offsetCount = aliceJs.searchDataCount;
                 }
                 urlParam = aliceJs.serialize(document.getElementById('searchDocumentsFrm')) + '&offset=' + offsetCount;
-                restSearchSubmit('get', '/rest/documents-admin?' + urlParam, isScroll);
+                restSearchSubmit('get', '/rest/workflows?' + urlParam, isScroll);
             } else {
                 offsetCount = 0;
                 urlParam = aliceJs.serialize(document.getElementById('searchDocumentsFrm')) + '&offset=' + offsetCount;
-                restSearchSubmit('get', '/documents-admin/list?' + urlParam, isScroll);
+                restSearchSubmit('get', '/workflows?' + urlParam, isScroll);
             }
         }
 
@@ -104,7 +104,7 @@
                     documentInfo.documentIcon = documentIcon.value;
                 }
 
-                let url = '/rest/documents-admin';
+                let url = '/rest/workflows';
                 if (method === 'put' && documentId !== undefined) {
                     documentInfo.documentId = documentId;
                     url += '/' + documentId;
@@ -196,7 +196,7 @@
         function openDocumentEdit(documentId) {
             aliceJs.sendXhr({
                 method: 'GET',
-                url: (documentId !== undefined) ? '/documents-admin/' + documentId + '/edit' : '/documents-admin/new',
+                url: (documentId !== undefined) ? '/workflows/' + documentId + '/edit' : '/workflows/new',
                 callbackFunc: function(xhr) {
                     let modalOptions = {
                         title: (documentId !== undefined) ? i18n.msg('document.label.edit') : i18n.msg('document.label.register'),
@@ -291,7 +291,7 @@
         function openDocumentDisplay(documentId) {
             aliceJs.sendXhr({
                 method: 'GET',
-                url: '/rest/documents-admin/' + documentId + '/display',
+                url: '/rest/workflows/' + documentId + '/display',
                 callbackFunc: function(xhr) {
                     let modalOptions = {
                         title: i18n.msg('document.label.display'),
@@ -405,7 +405,7 @@
 
             const opt = {
                 method: 'put',
-                url: '/rest/documents-admin/' + documentId + '/display',
+                url: '/rest/workflows/' + documentId + '/display',
                 params: displayJson,
                 contentType: 'application/json',
                 callbackFunc: function () {
@@ -418,7 +418,8 @@
         }
 
         function deleteDocument(documentId) {
-            aliceJs.confirmIcon(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/documents-admin/' + documentId, {}, function(result) {
+            aliceJs.confirmIcon(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/workflows/' +
+                documentId, {}, function(result) {
                 if (JSON.parse(result)) {
                     aliceJs.alertSuccess('[[#{common.msg.delete}]]', function() {
                         location.reload();
