#9622 URL 문서 및 DB 스크립트 현행화 - [게시판]
* boards을 Articles로 변경 함.
** url 변경
/boards/search	            ==>	/boards/articles/search
/boards/search/param	==>	/boards/articles/search/param
/boards/list	            ==>	/boards/articles
/boards/{boardId}/new	==>	/boards/articles/{id}/new
/boards/{boardId}/view	==>	/boards/articles/{id}/view
/boards/{boardId}/edit	==>	/boards/articles/{id}/edit
/boards/{boardId}/comments/list	==>	/boards/articles/{id}/comments
/boards/{boardId}/replay/edit	==>	/boards/articles/{id}/replay/edit
/rest/boards	            ==>	/rest/boards/articles
/rest/boards	            ==>	/rest/boards/articles
/rest/boards/reply	            ==>	/rest/boards/articles/reply
/rest/boards/comments	==>	/rest/boards/articles/comments
/rest/boards	            ==>	/rest/boards/articles
/rest/boards/comments	==>	/rest/boards/articles/comments
/rest/boards/{boardId}	==>	/rest/boards/articles/{boardId}
/rest/boards/comments/{commentId}	==>	/rest/boards/articles/comments/{commentId}
** html 변경
board/boardSearch ==> board/boardArticlesSearch
board/boardList ==> board/boardArticlesList
board/boardEdit ==> board/boardArticlesEdit
board/boardView ==> board/boardArticlesView
board/boardCommentList ==> board/boardArticlesCommentList

--- a/src/main/resources/public/template/board/boardArticlesCommentList.html
+++ b/src/main/resources/public/template/board/boardArticlesCommentList.html
@@ -21,7 +21,7 @@
                 <span class="vertical-bar"></span>
                 <button class="reply-delete" sec:authorize="hasAuthority('board.delete')"
                         th:if="${#authentication.details.userKey} == (${boardComment?.createUser} ? ${boardComment.createUser.userKey} : '')"
-                        th:onclick="restSubmit('delete', [[@{/rest/boards/comments/{id}(id=${boardComment.boardCommentId})}]])">
+                        th:onclick="restSubmit('delete', [[@{/rest/boards/articles/comments/{id}(id=${boardComment.boardCommentId})}]])">
                     <span class="icon-delete" ></span>
                 </button>
             </div>
