--- a/src/main/resources/public/template/board/boardArticlesView.html
+++ b/src/main/resources/public/template/board/boardArticlesView.html
@@ -46,12 +46,12 @@
             <div class="btn-list">
                 <button sec:authorize="hasAuthority('board.create')" style="margin-right: 5px;"
                         class="point-fill" th:if="${boardInfo?.boardId} and ${boardAdminInfo.replyYn}"
-                        th:onclick ="'location.href =\'' + @{/boards/{id}/replay/edit(id=${boardInfo?.boardId})}+'\''"
+                        th:onclick ="'location.href =\'' + @{/boards/articles/{id}/replay/edit(id=${boardInfo?.boardId})}+'\''"
                         th:text="#{board.btn.reply}">
                 </button>
                 <button sec:authorize="hasAuthority('board.update')" style="margin-right: 5px;"
                         class="point-fill" th:if="${#authentication.details.userKey} == (${boardInfo?.createUser} ? ${boardInfo.createUser.userKey} : '')"
-                        th:onclick ="'location.href =\'' + @{/boards/{id}/edit(id=${boardInfo?.boardId})}+'\''"
+                        th:onclick ="'location.href =\'' + @{/boards/articles/{id}/edit(id=${boardInfo?.boardId})}+'\''"
                         th:text="#{common.btn.modify}">
                 </button>
                 <button sec:authorize="hasAuthority('board.delete')" style="margin-right: 5px;"
@@ -59,7 +59,8 @@
                         th:onclick="deleteBoard('delete')"
                         th:text="#{common.btn.delete}">
                 </button>
-                <a class="btn default-line" th:href="@{/boards/search/param?boardAdminId={id}(id=${boardAdminInfo.boardAdminId})}" th:text="#{common.btn.list}"></a>
+                <a class="btn default-line"
+                   th:href="@{/boards/articles/search/param?boardAdminId={id}(id=${boardAdminInfo.boardAdminId})}" th:text="#{common.btn.list}"></a>
             </div>
             <div class="reply-body" th:if="${boardAdminInfo.commentYn} and ${boardInfo?.boardId}">
                 <div class="reply-input-row flex-row">
@@ -111,12 +112,13 @@
 
         //조회 화면 이동
         function searchBoard() {
-            location.href = '/boards/search/param?boardAdminId=' + boardAdminId;
+            location.href = '/boards/articles/search/param?boardAdminId=' + boardAdminId;
         }
 
         //게시판 삭제
         function deleteBoard(method) {
-            aliceJs.confirmIcon(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/boards/' + boardId);
+            aliceJs.confirmIcon(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete',
+                '/rest/boards/articles/' + boardId);
         }
 
         //게시판 댓글 저장
@@ -126,12 +128,12 @@
                 boardId: boardId,
                 boardCommentContents: document.getElementById('boardComments').value
             };
-            restSubmit(method, '/rest/boards/comments', data);
+            restSubmit(method, '/rest/boards/articles/comments', data);
         }
 
         //게시판 댓글 조회
         function getBoardCommentList() {
-            restSubmit('get', '/boards/' + boardId + '/comments/list');
+            restSubmit('get', '/boards/articles/' + boardId + '/comments');
         }
 
         //게시판 댓글 수정
@@ -155,7 +157,7 @@
                 boardId: boardId,
                 boardCommentContents: document.getElementById('editComments').value
             };
-            restSubmit(method, '/rest/boards/comments', data);
+            restSubmit(method, '/rest/boards/articles/comments', data);
         }
 
         //REST API
@@ -174,7 +176,7 @@
                 callbackFunc: function(response) {
                     if (method === 'put' || method === 'post' || method === 'delete') {
                         aliceJs.alertSuccess(resultMsg, function () {
-                            if (url.indexOf('/rest/boards/comments') !== -1) {
+                            if (url.indexOf('/rest/boards/articles/comments') !== -1) {
                                 document.getElementById('boardComments').value = '';
                                 getBoardCommentList();
                             } else {
